[package]
name = "whisped"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
dirs = "6.0.0"
hound = "3.5.1"
lewton = "0.10.2"
minimp3 = { version = "0.5.1", features = ["async_tokio"] }
reqwest = "0.12.15"
rubato = "0.16.2"
tokio = { version = "1.44.2", features = ["fs", "macros", "rt-multi-thread"] }
whisper-rs = "0.14.2"
